src/objects/Legal_Documents__c.object
<CustomObject>
    <fields>
        <fullName>ACV__c</fullName>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Documents</relationshipLabel>
        <relationshipName>Vendor_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legal Documents</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgreementID__c</fullName>
        <label>Legacy Agreement ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Support_CPI_End_Date__c</fullName>
        <label>Annual Support CPI End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Support_CPI_Start_Date__c</fullName>
        <label>Annual Support CPI Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Support_CPI__c</fullName>
        <label>Annual Support CPI</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <label>Auto-Renew</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_ID__c</fullName>
        <label>Budget ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CROApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRO_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make checkbox true if anything is added to future price guarantee, business approval, and negotiated enterprise terms sections.</description>
        <label>CRO Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Created_Date__c</fullName>
        <label>Case Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_ID__c</fullName>
        <label>Case ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changes_Enterprise_Terms__c</fullName>
        <label>Changes Enterprise Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Negotiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consulting_100K__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consulting 100K</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consulting_Discount_End_Date__c</fullName>
        <label>Consulting Discount End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consulting_Discount_Start_Date__c</fullName>
        <label>Consulting Discount Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consulting_Discount__c</fullName>
        <label>Consulting Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <formula>ABS((Contract_End_Date__c - Contract_Start_Date__c) / 365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Length</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracts_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Systems</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Legal Documents</relationshipLabel>
        <relationshipName>Legal_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Master Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Master License Agreement</fullName>
                </value>
                <value>
                    <fullName>OEM Agreement</fullName>
                </value>
                <value>
                    <fullName>Partner Agreement</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>RFP Response</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_ID__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , IF(RecordType.DeveloperName != &apos;Vendor_Document&apos;,Name ,Vendor_Document_ID__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Legal Document Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Education_Discount_End_Date__c</fullName>
        <label>Education Discount End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Education_Discount_Start_Date__c</fullName>
        <label>Education Discount Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Education_Discount__c</fullName>
        <label>Education Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Enterprise_Terms_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enterprise Terms Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_Date_F__c</fullName>
        <formula>datevalue( Execution_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Execution Date F</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <description>when an agreement is approved/executed</description>
        <label>Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expiration Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPG_Discount__c</fullName>
        <description>The percentage discount you are offering.</description>
        <inlineHelpText>The percentage discount you are offering.</inlineHelpText>
        <label>FPG Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FPG_Notes__c</fullName>
        <description>Any complex requirements for the FPG.</description>
        <inlineHelpText>Add clarifying notes here.</inlineHelpText>
        <label>FPG Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fast_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Costs__c</fullName>
        <label>Fixed Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoicing_Terms__c</fullName>
        <label>Invoicing Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <inlineHelpText>Written justification for a high priority deal, should indicate the business reason for this deal to be reviewed first.</inlineHelpText>
        <label>Legal Priority Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LC_LOE__c</fullName>
        <inlineHelpText>Number of active hours spent by the legal representative reviewing this deal.</inlineHelpText>
        <label>LC LOE (hrs)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDContractID__c</fullName>
        <label>Legacy Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDContractLink__c</fullName>
        <formula>&quot;https://portal.microstrategy.com/Quote/Main.aspx?p=SearchResult&amp;mode=15&amp;title=Matched%20Quotes&amp;searchCriteria=&quot;&amp; LDContractID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Contract Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDDescription__c</fullName>
        <label>Legacy Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDDocumentLink__c</fullName>
        <formula>&quot;https://portal.microstrategy.com/QuoteSystemFiles/&quot;&amp; LDDocumentName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Document Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDDocumentName__c</fullName>
        <label>Legacy Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_Aprvl_Completed__c</fullName>
        <label>L Aprvl Completed</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalDocumentApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Document Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegalReviewPriority__c</fullName>
        <inlineHelpText>Indicated the level of urgency related to the legal review of this quote. Used to prioritize work in the legal queue.</inlineHelpText>
        <label>Legal Review Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P4 - Secondary</fullName>
                </value>
                <value>
                    <fullName>P3 - Standard</fullName>
                    <default>true</default>
                    <label>P3 - Standard</label>
                </value>
                <value>
                    <fullName>P2 - High</fullName>
                </value>
                <value>
                    <fullName>P1 - Highest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Author__c</fullName>
        <label>Legal CAF Comments By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_CAF_Comments__c</fullName>
        <label>Legal CAF Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Clarification_Notes__c</fullName>
        <label>Legal Clarification Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Date__c</fullName>
        <label>Legal CAF Comments Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Internal_Notes__c</fullName>
        <label>Legal Internal Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Terms__c</fullName>
        <label>Legal Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Discount_End_Date__c</fullName>
        <label>License Discount End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Discount_Start_Date__c</fullName>
        <label>License Discount Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Discount__c</fullName>
        <label>License Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>License_Terms__c</fullName>
        <description>Non-standard terms relating to the customer’s license to and use of our software, e.g., software acceptance, hot failover disaster recovery use, worldwide license grant.</description>
        <inlineHelpText>Non-standard terms relating to the customer’s license to and use of our software, e.g., software acceptance, hot failover disaster recovery use, worldwide license grant.</inlineHelpText>
        <label>License Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRS_Download__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MRS Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MYC__c</fullName>
        <label>Multi Year Commit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Agreement</label>
        <referenceTo>Legal_Documents__c</referenceTo>
        <relationshipLabel>Amendments</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oral_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oral Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_MSA__c</fullName>
        <label>Original MSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Record_Type_Name__c</fullName>
        <label>Original Record Type Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Enterprise_Terms__c</fullName>
        <description>Any material commercial terms that does not fit into another Negotiated Enterprise Term field, e.g., customer has a specific order form template that requires manual preparation of an order by Legal.</description>
        <inlineHelpText>Any material commercial terms that does not fit into another Negotiated Enterprise Term field, e.g., customer has a specific order form template that requires manual preparation of an order by Legal.</inlineHelpText>
        <label>Other Enterprise Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Payment__c</fullName>
        <label>Pre-Payment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Payment_and_Invoicing_Terms__c</fullName>
        <description>Non-standard terms relating to pricing, payment and invoicing requirements and restrictions, e.g., no late payment penalties, non-standard payment terms greater 120 days, less frequent than monthly invoicing for T&amp;M consulting engagements.</description>
        <inlineHelpText>Non-standard terms relating to pricing, payment and invoicing requirements and restrictions, e.g., no late payment penalties, non-standard payment terms greater 120 days, less frequent than monthly invoicing for T&amp;M consulting engagements.</inlineHelpText>
        <label>Pricing, Payment and Invoicing Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuarterExecuted__c</fullName>
        <formula>IF(ISNULL(Execution_Date__c), null,RIGHT(TEXT(YEAR(Execution_Date_F__c)), 2)&amp;&quot;&quot;&amp;&quot;Q&quot;&amp;Text(CEILING( MONTH ( Execution_Date_F__c ) / 3 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Executed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Executed__c</fullName>
        <formula>IF(ISNULL(Execution_Date__c), null,RIGHT(TEXT(YEAR(Execution_Date_F__c)), 2)&amp;&quot;&quot;&amp;&quot;Q&quot;&amp;Text(CEILING( MONTH ( Execution_Date_F__c ) / 3 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Executed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RVP_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RVP Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legal_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <label>Renewal?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rev_Rec_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rev Rec Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rev_Rec_Author__c</fullName>
        <label>Rev Rec CAF Comments By </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev_Rec_CAF_Comments__c</fullName>
        <label>Rev Rec CAF Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rev_Rec_Clarification_Notes__c</fullName>
        <label>Rev Rec Clarification Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rev_Rec_Date__c</fullName>
        <label>Rev Rec CAF Comments Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rev_Rec_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rev Rec Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Right_to_Terminate_and_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer requests right to terminate technical support and receive a refund of prepaid, unused support fees; if this box is checked, a detailed description of this right must be included in the “Technical Support Terms” box below.</description>
        <inlineHelpText>Customer requests right to terminate technical support and receive a refund of prepaid, unused support fees; if this box is checked, a detailed description of this right must be included in the “Technical Support Terms” box below.</inlineHelpText>
        <label>Right to Terminate Support and Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_Acceptance_Limited_to_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acceptance Limited to Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_Broaden_License_Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer requests that license grant be expanded to cover all of its business operations (not only “internal business operations), which would allow software use as part of external, client-facing applications.</description>
        <inlineHelpText>Customer requests that license grant be expanded to cover all of its business operations (not only “internal business operations), which would allow software use as part of external, client-facing applications.</inlineHelpText>
        <label>License for Internal &amp; External Bus Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_FPG_Product__c</fullName>
        <description>The product SKU that the FPG applies to.</description>
        <inlineHelpText>The product SKU or SKUs that the FPG applies to.</inlineHelpText>
        <label>FPG Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_FPG_Required__c</fullName>
        <formula>OR((NOT(ISBLANK(FPG_Discount__c))), (NOT(ISBLANK(SBCF_FPG_Term__c))), (NOT(ISBLANK(SBCF_FPG_Product__c))))</formula>
        <label>FPG Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_FPG_Term__c</fullName>
        <description>The number of months the guarantee will be valid for.</description>
        <inlineHelpText>How many months will this discount be valid?</inlineHelpText>
        <label>FPG Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBCF_Failure_to_Deliver_Penalties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failure to Deliver Penalties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_Free_development_rights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free development rights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_Hot_failover_disaster_recover_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot failover disaster recover use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_License_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A conversion of all or a subset of the customer’s current licenses to new licenses; if this box is checked, a detailed description of the conversion must be included in the “License Terms” box below.</description>
        <inlineHelpText>A conversion of all or a subset of the customer’s current licenses to new licenses; if this box is checked, a detailed description of the conversion must be included in the “License Terms” box below.</inlineHelpText>
        <label>License Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_License_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A restriction on the usage of a software license, e.g., application restriction, use restriction, user type restriction; if this box is checked, a detailed description of the restriction must be included in the “License Terms” box below.</description>
        <inlineHelpText>A restriction on the usage of a software license, e.g., application restriction, use restriction, user type restriction; if this box is checked, a detailed description of the restriction must be included in the “License Terms” box below.</inlineHelpText>
        <label>License Restriction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_Multi_Year_Support_Commitments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer commits to renew standard technical support for a certain number of years; if this box is checked, a detailed description of the commitment must be included in the “Technical Support Terms” box below.</description>
        <inlineHelpText>Customer commits to renew standard technical support for a certain number of years; if this box is checked, a detailed description of the commitment must be included in the “Technical Support Terms” box below.</inlineHelpText>
        <label>Multi-Year Support Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_No_Name_Logo_Rights__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer requests to remove language granting MSTR the right to use customer’s name and logo.</description>
        <inlineHelpText>Customer requests to remove language granting MSTR the right to use customer’s name and logo.</inlineHelpText>
        <label>No Name/Logo Rights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_No_PEP_auto_renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer requires that PEP cannot auto-renew (any renewal requires affirmative action by customer).</description>
        <inlineHelpText>Customer requires that PEP cannot auto-renew (any renewal requires affirmative action by customer).</inlineHelpText>
        <label>No PEP Auto-Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_No_Press_Rights__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer requests to remove language granting MSTR the right to issue press release.</description>
        <inlineHelpText>Customer requests to remove language granting MSTR the right to issue press release.</inlineHelpText>
        <label>No Press Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_No_Technical_Support_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer requires that Technical Support cannot auto-renew (any renewal requires affirmative action by customer).</description>
        <inlineHelpText>Customer requires that Technical Support cannot auto-renew (any renewal requires affirmative action by customer).</inlineHelpText>
        <label>No Technical Support Auto-Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_No_charge_software_installation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No charge software installation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_Reimbursement_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer will not reimburse MSTR for travel expenses incurred in services engagement.</description>
        <inlineHelpText>Customer will not reimburse MSTR for travel expenses incurred in services engagement.</inlineHelpText>
        <label>No Reimbursement of Travel Expenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_Right_to_Store_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right-to-Store License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_Right_to_deploy_license__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right-to-deploy license</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Terms__c</fullName>
        <description>Non-standard terms relating to the sale and provision of education and consulting services, e.g., acceptance of T&amp;M consulting, fixed-price consulting deals.</description>
        <inlineHelpText>Non-standard terms relating to the sale and provision of education and consulting services, e.g., acceptance of T&amp;M consulting, fixed-price consulting deals.</inlineHelpText>
        <label>Services Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>